# pep257-rs

./: .clippy.toml  .cspell.json  .deny.toml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mise.toml  .rustfmt.toml  .shellcheckrc  .taplo.toml  .typos.toml  CHECKS.md  Cargo.toml  HELP.md  LICENSE  README.md  deny.toml
.github/: zizmor.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
src/: analyzer.rs  file_collector.rs  lib.rs  main.rs  parser.rs  pep257.rs
test_files/: all_styles_demo.rs  bad_example.rs  blank_line_test.rs  doc_attr_comprehensive_test.rs  doc_attr_test.rs  enum_test.rs  good_example.rs  macro_test.rs  package_lib_bad.rs  package_lib_good.rs  package_main_bad.rs  package_main_good.rs  package_mod_bad.rs  package_mod_good.rs  r101_r103_demo.rs  type_alias_test.rs  validators.rs
tests/: file_collector.rs  file_collector_tests.rs
tools/: .tidy-check-license-headers  tidy.sh
