[package]
name = "pep257"
description = "PEP 257 docstring style checker for Rust code"
repository = "https://github.com/jayvdb/pep257-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
serde_json = "1.0"
