[package]
name = "pep257"
description = "PEP 257 docstring style checker for Rust code"
repository = "https://github.com/jayvdb/pep257-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde_json = "1.0"
streaming-iterator = "0.1"
thiserror = "2.0"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
