[package]
name = "pep257"
description = "PEP 257 docstring style checker for Rust code"
repository = "https://github.com/jayvdb/pep257-rs"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = { version = "0.1.5", optional = true }
clap-verbosity-flag = { version = "3.0", features = ["log"] }
env_logger = "0.11"
imperative = "1.0"
log = "0.4"
regex = "1.11"
serde_json = "1.0"
streaming-iterator = "0.1"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
